# burn-style

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
alembic/: env.py
app/: main.py
backend/: Dockerfile  pyproject.toml  vercel.json
backend/alembic/versions/: 2497e50b8efc_initial.py  2fe318f904fc_initial.py  30a24e9b8516_add_categories_symbol.py  45af332485ef_initial.py  4b55d17ee529_add_webauthn_challenges.py  58a540512762_add_expense_vibes.py  7160fa235146_initial.py  9ca611086cef_add_ondelete_cascade.py  9da908518910_initial.py  a1b2c3d4e5f6_drop_expense_templates.py  aec700ae61d2_add_recurring_expenses_and_expenses_.py  c4ddc57e2edf_add_categories_position.py  daf5538577db_expand_categories_symbol_length_to_64.py  e345bb132e9a_add_expensed_at_to_expenses.py  eccde9337361_subscription_templatesテーブル追加.py
backend/scripts/: seed_all.py  seed_categories.py  seed_expense_templates.py  seed_expenses.py  seed_expenses_100.sql  seed_user.py
backend/src/: config.py  logger.py  main.py
backend/src/api/: __init__.py  auth.py  categories.py  deps.py  expense_templates.py  expenses.py  health.py  recurring_expenses.py  routes.py  subscription_templates.py  users.py
backend/src/middleware/: __init__.py  request_logging.py  token_refresh.py
backend/src/model/: __init__.py  category.py  expense.py  expense_category_association.py  expense_template.py  recurring_expense.py  subscription_template.py  user.py  utils.py  webauthn_challenge.py  webauthn_credential.py
backend/src/repository/: __init__.py  category_repository.py  database.py  expense_repository.py  expense_template_repository.py  recurring_expense_repository.py  user_repository.py  webauthn_challenge_repository.py  webauthn_repository.py
backend/src/schema/: __init__.py  auth.py  category.py  expense.py  expense_template.py  recurring_expense.py  subscription_template.py  types.py  user.py
backend/src/service/: challenge_store.py  expense_service.py  expense_template_service.py  jwt_service.py  recurring_expense_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/api/: test_categories.py  test_expenses.py  test_health.py  test_recurring_expenses.py  test_users.py
backend/tests/repository/: test_webauthn_challenge_repository.py
db/: Dockerfile.db
docs/: README.md  auth.md  category.md  data-model.md  expense.md  infra.md  screens.md  settings.md
frontend/: .oxfmtrc.json  Dockerfile  biome.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: emoji-to-png.html  seed_all.py  seed_categories.py  seed_expenses.py  seed_users.py  (+2 more)
(+210 files in other folders)
