[project]
name = "finance"
version = "0.1.0"
description = "Finance API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.44",
    "uuid6>=2024.5.1",
    "uvicorn[standard]==0.32.0",
]

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "ruff>=0.14.8",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
